--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "idpchannel_2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://papimon33.github.io/kacidp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "postdeploy": "echo 'Deployment complete!'"
   },
   "eslintConfig": {
     "extends": [
